refactor: rename endpoint
